Updated azlist css to fix alphabet spacing

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_a-z-list.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_a-z-list.scss
@@ -13,7 +13,7 @@
       //specific margin here to ensure this lines up with "filter" heading next to it
       margin-bottom: .64rem;
       li{
-        width:21px;
+        width:25px;
 
         a:link, a:visited{
           font-weight: normal;
